<!-- Layout for the editor -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- First category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_your_name"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:hint="@string/hint_user_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

     </LinearLayout>

   </LinearLayout>

    <!-- second category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_distance"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Distance field -->
            <EditText
                android:id="@+id/edit_distance"
                android:hint="@string/hint_distance"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for distance(kg) -->
            <TextView
                android:text="@string/distance_units"
                style="@style/EditorUnitsStyle"
                android:layout_width="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

    <!-- third category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_steps"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Distance field -->
            <EditText
                android:id="@+id/edit_steps"
                android:hint="@string/hint_steps"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <!-- Units for distance(kg) -->
            <TextView
                android:text="@string/steps"
                style="@style/EditorUnitsStyle"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
